spell check, video fix on mobile + proj mobile css

--- a/src/components/CV/components/CV.css
+++ b/src/components/CV/components/CV.css
@@ -1,18 +1,115 @@
-.cv-page {
+.page {
+  display: flex;
+  flex-direction: row;
+  /* overflow: hidden; */
+}
+@media screen and (max-width: 1560px) {
+  .page {
+    transform: scale(0.9);
+  }
+}
+@media screen and (max-width: 1554px) {
+  .cv-header,
+  .cv-name {
+    font-size: 0.7rem;
+  }
+}
+@media screen and (max-width: 1442px) {
+  .titles,
+  h4 {
+    font-size: 10px;
+  }
+}
+@media screen and (max-width: 1338px) {
+  .page {
+    flex-direction: column;
+    transform: scale(1);
+    align-items: center;
+  }
+  .cv-header {
+    font-size: 1rem;
+  }
+}
+@media screen and (max-width: 840px) {
+  .page {
+    transform: scale(0.8);
+    /* position: absolute; */
+    margin-top: -170px;
+  }
+}
+@media screen and (max-width: 687px) {
+  .page {
+    transform: scale(0.7);
+    /* position: absolute; */
+    margin-top: -255px;
+  }
+}
+@media screen and (max-width: 600px) {
+  .page {
+    transform: scale(0.65);
+    /* position: absolute; */
+    margin-top: -300px;
+  }
+}
+
+/* THIS IS WHERE I WANT TO CHANGE THE FLEX BOX OF EACH DIV.  */
+@media screen and (max-width: 560px) {
+  .page {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+  }
+
+  .cv-header .cv-name {
+    font-size: 50px;
+  }
+  .cv-header h4 {
+    font-size: 30px;
+  }
+  .cv-profile p {
+    font-size: 20px;
+
+    text-align: justify;
+    /* border: black solid; */
+    height: 100%;
+    align-content: center;
+  }
+  .cv-profile .titles {
+    font-size: 30px;
+  }
+  .cv-experience p {
+    font-size: 20px;
+    text-align: justify;
+    border: black solid;
+    height: 100%;
+    align-content: center;
+  }
+  .cv-experience .titles {
+    font-size: 30px;
+  }
+  .cv-experience h4 {
+    font-size: 30px;
+  }
+}
+
+.cv-page,
+.cv-page2 {
   padding: 20px 20px 0 20px;
   margin: 0%;
-  height: 100%;
+  height: 100vh;
   min-height: 100%;
   display: flex;
   flex-direction: column;
   color: black;
   background-color: #a7cce9;
-  border: black solid;
-  width: 800px;
-  align-items: center;
-  /* position: fixed; */
+  border: black solid 1px;
+  width: 100vh;
+  /* align-items: center; */
 }
 
+.cv-name {
+  font-size: 1.5rem;
+}
 .cv-header,
 .cv-profile,
 .cv-experience,
@@ -26,7 +123,7 @@
   color: black;
 }
 h5 {
-  color: #f3b63f;
+  color: #04aa6d;
 }
 .linkage {
   text-decoration: none;
